Added more details to the resume.

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
                         <span class="text-primary">Gherlan</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Craiova · Romania ·
+                        Full Remote Only · Craiova · Romania ·
                         <a href="mailto:robertgherlan@gmail.com">robertgherlan@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
-                        Senior Software Engineer <i class="fa-solid fa-grip-lines-vertical"></i> Contractor <i class="fa-solid fa-grip-lines-vertical"></i> Frelancer <i class="fa-solid fa-grip-lines-vertical"></i> Cloud Architect with 7+ years of experience focused on delivering efficient, maintainable, secure, reliable, and high-quality solutions.
+                        Senior Software Engineer <i class="fa-solid fa-grip-lines-vertical"></i> Backend Engineer <i class="fa-solid fa-grip-lines-vertical"></i> Cloud Engineer <i class="fa-solid fa-grip-lines-vertical"></i> Contractor <i class="fa-solid fa-grip-lines-vertical"></i> Frelancer <i class="fa-solid fa-grip-lines-vertical"></i> Java <i class="fa-solid fa-grip-lines-vertical"></i> Golang
+                        <br/>
+                        Having 8+ years of experience focused on delivering efficient, maintainable, secure, reliable, and high-quality solutions.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/robert-gherlan/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -65,7 +67,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Java Software Engineer</h3>
                             <div class="subheading mb-3">rinf.tech</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <p>
+                                To be written
+                            </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2022 - Present</span></div>
                     </div>
@@ -73,7 +77,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Java Software Engineer</h3>
                             <div class="subheading mb-3">R Systems</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <p>
+                                To be written
+                            </p>    
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021 - February 2022</span></div>
                     </div>
@@ -81,7 +87,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Senior Java Engineer</h3>
                             <div class="subheading mb-3">Museglobal SA</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>
+                                To be written
+                            </p>    
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2020 - October 2021</span></div>
                     </div>
@@ -89,7 +97,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Java Engineer</h3>
                             <div class="subheading mb-3">Museglobal SA</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <p>
+                                To be written
+                            </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2015 - May 2020</span></div>
                     </div>
@@ -104,29 +114,155 @@
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="fab fa-java"></i></li>
                         <li class="list-inline-item"><i class="fab fa-aws"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3 mt-3">Tech stack that I worked with in the past years:</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            Java 17, Spring Boot, Quarkus, Micronaut, Hibernate, JPA
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            SQL, Python(Programming Language), Go(Programming Language)
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">Software Engineering Principles:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            System Design, Design Patterns, SOLID, KISS, DRY, OOP
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            Software Development Life Cycle (SDLC)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            RESTful APIs
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Test-driven development (TDD)
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">Cloud Technologies:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Google Cloud Platform(GCP)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Amazon Web Services(AWS)
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">DevOps:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Continuous Integration/Continuous Delivery (CI/CD)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Docker, Kubernetes, Jenkins, GitHub Actions, Jenkins, Google Cloud Build
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Monitoring/Logging/Operations(Prometheus, Grafana, Zipkin, Google Cloud Monitoring)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Infrastructure-as-Code (IaC) with Terraform
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">Workflow Orchestration:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Apache Airflow / Google Cloud Composer
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">Databases:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Data Warehouse / Analytics: BigQuery
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            RDBMS: MySQL, PostgreSQL
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            NoSQL: MongoDB, CouchDB, Cloud Firestore
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">Messaging Systems:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            RabbitMQ
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Kafka
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Pub/Sub
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">Testing Frameworks:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            JUnit
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Spring Boot Test
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            pytest
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            gotest
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Mockito
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            RestAssured
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Testcontainers
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">Load Testing:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            JMeter, k6
+                        </li>
+                    </ul>
+                    <div class="subheading mb-3 mt-3">Software Architecture:</div>
+                    <ul class="fa-ul mb-0">
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Monolith
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Model–view–controller(MVC)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Microservices
                         </li>
                     </ul>
                 </div>
@@ -164,27 +300,27 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            <a href="https://www.credential.net/ec1918ac-857c-44ae-8333-15bbee87e298">Google Cloud Certified: Professional Cloud Architect</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            <a href="https://www.credential.net/4e93ed00-ebb7-4769-b652-bbbe74c468db">Google Cloud Certified: Professional Data Engineer</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            <a href="https://www.credly.com/badges/93925f64-4788-4bc1-99b1-c23a7290ce73">CompTIA Security+ ce Certification</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            <a href="https://www.credly.com/badges/8d989e06-932a-43b8-b4ff-18c7d1d12e56">AWS Certified Solutions Architect – Associate</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            <a href="https://www.youracclaim.com/badges/cc408c66-9045-4b1e-8e78-c2961740bfbd">VMware Spring Professional 2021</a>
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            <a href="https://www.youracclaim.com/badges/9a27ae27-c1a7-46a2-ab48-0d09e3674d6d">Oracle Certified Professional: Java SE 11 Developer</a>
                         </li>
                     </ul>
                 </div>
